--- a/Blog.Web/Pages/Shared/_Layout.cshtml
+++ b/Blog.Web/Pages/Shared/_Layout.cshtml
@@ -1,10 +1,24 @@
-﻿<!DOCTYPE html>
+﻿@inject IWebHostEnvironment Environment
+@{
+    var isDevelopment = Environment.IsDevelopment();
+}
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>@ViewData["Title"] - Blog.Web</title>
-    <link rel="stylesheet" href="~/css/tailwindcss.css" asp-append-version="true"/>
+    
+    @if (isDevelopment)
+    {
+      <script src="https://cdn.tailwindcss.com"></script>
+    }
+    else
+    {
+      <link rel="stylesheet" href="~/css/tailwindcss.css" asp-append-version="true"/>
+    }
+    
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
     @* Google Fonts *@
     <link rel="preconnect" href="https://fonts.googleapis.com">
