--- a/Blog.Web/wwwroot/css/tailwindcss.css
+++ b/Blog.Web/wwwroot/css/tailwindcss.css
@@ -791,10 +791,6 @@ select {
   margin-top: 36px;
 }
 
-.ml-10 {
-  margin-left: 2.5rem;
-}
-
 .mt-4 {
   margin-top: 1rem;
 }
@@ -805,6 +801,10 @@ select {
 
 .mb-4 {
   margin-bottom: 1rem;
+}
+
+.ml-10 {
+  margin-left: 2.5rem;
 }
 
 .mt-10 {
@@ -1195,6 +1195,10 @@ select {
   padding: 32px;
 }
 
+.p-5 {
+  padding: 1.25rem;
+}
+
 .py-20 {
   padding-top: 5rem;
   padding-bottom: 5rem;
@@ -1242,6 +1246,10 @@ select {
 
 .pb-20 {
   padding-bottom: 5rem;
+}
+
+.pl-7 {
+  padding-left: 1.75rem;
 }
 
 .pt-8 {
