--- a/Blog.Web/Pages/Archive/Index.cshtml
+++ b/Blog.Web/Pages/Archive/Index.cshtml
@@ -209,6 +209,27 @@
             </a>
         }
     }
+
+    <div class="flex w-full justify-between">
+        
+        @if (Model.PreviousPageToken == null)
+        {
+            <p class="text-gray-500">Previous</p>
+        }
+        else
+        {
+            <a asp-page="Archive/Index" asp-route-pageToken="@Model.PreviousPageToken" class="">Previous</a>
+        }
+
+        @if (Model.NextPageToken == null)
+        {
+            <p class="text-gray-500">Next</p>
+        }
+        else
+        {
+            <a asp-page="Archive/Index" asp-route-pageToken="@Model.NextPageToken" class="">Next</a>
+        }
+    </div>
 </div>
 
 @section Scripts
