fix: 修复首页砖块个数错误

--- a/Blog.Web/Pages/Archive/Index.cshtml
+++ b/Blog.Web/Pages/Archive/Index.cshtml
@@ -218,7 +218,7 @@
         }
         else
         {
-            <a asp-page="Archive/Index" asp-route-pageToken="@Model.PreviousPageToken" class="">Previous</a>
+            <a asp-page="/Archive/Index" asp-route-pageToken="@Model.PreviousPageToken" class="">Previous</a>
         }
 
         @if (Model.NextPageToken == null)
@@ -227,7 +227,7 @@
         }
         else
         {
-            <a asp-page="Archive/Index" asp-route-pageToken="@Model.NextPageToken" class="">Next</a>
+            <a asp-page="/Archive/Index" asp-route-pageToken="@Model.NextPageToken" class="">Next</a>
         }
     </div>
 </div>
