--- a/Blog.Web/Pages/Archive/Index.cshtml
+++ b/Blog.Web/Pages/Archive/Index.cshtml
@@ -210,24 +210,24 @@
         }
     }
 
-    <div class="flex w-full justify-between">
+    <div class="flex w-full justify-between mt-4 mb-8">
         
         @if (Model.PreviousPageToken == null)
         {
-            <p class="text-gray-500">Previous</p>
+            <p class="text-gray-500 font-semibold">Previous</p>
         }
         else
         {
-            <a asp-page="/Archive/Index" asp-route-pageToken="@Model.PreviousPageToken" class="">Previous</a>
+            <a asp-page="/Archive/Index" asp-route-pageToken="@Model.PreviousPageToken" class="font-semibold">Previous</a>
         }
 
         @if (Model.NextPageToken == null)
         {
-            <p class="text-gray-500">Next</p>
+            <p class="text-gray-500 font-semibold">Next</p>
         }
         else
         {
-            <a asp-page="/Archive/Index" asp-route-pageToken="@Model.NextPageToken" class="">Next</a>
+            <a asp-page="/Archive/Index" asp-route-pageToken="@Model.NextPageToken" class="font-semibold">Next</a>
         }
     </div>
 </div>
