--- a/Blog.Web/Pages/Shared/_Layout.cshtml
+++ b/Blog.Web/Pages/Shared/_Layout.cshtml
@@ -58,7 +58,7 @@
             <div class="flex space-x-6 md:order-2">
                 @await Component.InvokeAsync("CultureDisplay")
             </div>
-            <p class="mt-8 text-xs leading-5 text-gray-500 md:order-1 md:mt-0">&copy; 2020 Your Company, Inc. All rights reserved.</p>
+            <p class="mt-8 text-xs leading-5 text-gray-500 md:order-1 md:mt-0">&copy; 2023 Yiran Feng. All rights reserved.</p>
         </div>
     </div>
 </footer>
