--- a/Blog.Web/Pages/Archive/Index.cshtml
+++ b/Blog.Web/Pages/Archive/Index.cshtml
@@ -8,7 +8,7 @@
 }
 
 <div class="mt-4 bg-gray-100 w-screen">
-    <div class="flex gap-4 items-center lg:w-[980px] w-[692px]  mx-auto pt-8 pb-8 text-sm">
+    <div class="flex gap-4 items-center max-w-[366px] sm:max-w-full w-5/6 sm:w-[600px] lg:w-[980px]  mx-auto pt-8 pb-8 text-sm">
         <div class="font-semibold text-gray-500 whitespace-nowrap">@Localizer["筛选"]</div>
 
         @* Domain Dropdown Selection *@
@@ -191,7 +191,7 @@
 </div>
 
 
-<div class="lg:w-[980px] w-[692px] mx-auto mt-12">
+<div class="max-w-[366px] sm:max-w-full w-5/6 sm:w-[600px] lg:w-[980px] mx-auto mt-12">
     @foreach (var (t, list) in Model.PostForDisplay.Reverse())
     {
         <div class="text-2xl font-bold mb-4">@t.ToString("y")</div>
