--- a/Blog.Web/Pages/Components/Nav/Default.cshtml
+++ b/Blog.Web/Pages/Components/Nav/Default.cshtml
@@ -5,8 +5,8 @@
 
 <nav class="sticky top-0 z-20 bg-white backdrop-filter backdrop-blur-lg bg-opacity-30">
     <div class="max-w-[980px] mx-auto">
-        <div class="flex items-center justify-between h-12">
-            <a asp-route-culture="@Context.Request.RouteValues["culture"]" asp-page="/Index" class="block text-xl text-gray-900 font-medium">@Model.DomainInfo!.Name</a>
+        <div class="flex items-center justify-between h-12 px-4 sm:px-6 lg:px-0">
+            <a asp-route-culture="@Context.Request.RouteValues["culture"]" asp-page="/Index" class="block text-lg sm:text-xl text-gray-900 font-medium">@Model.DomainInfo!.Name</a>
             <div class="flex gap-8 text-gray-900 text-xs">
                 <button type="button" class="flex items-center justify-between gap-1">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-3 h-3">
