--- a/Blog.Web/Pages/Index.cshtml
+++ b/Blog.Web/Pages/Index.cshtml
@@ -10,7 +10,7 @@
 
 <div class="bg-gray-100 pb-20 z-1">
     <div class="h-10"></div>
-    <div class=" lg:w-[980px] w-[692px] mx-auto">
+    <div class=" max-w-[366px] sm:max-w-full w-5/6 sm:w-[600px] lg:w-[980px] mx-auto">
         @if (Model.TopicId == null)
         {
             <h1 class="text-4xl font-semibold mb-[24px]">@Localizer["最新文章"]</h1>
@@ -21,21 +21,20 @@
             <p class="text-3xl font-bold mb-[24px] mt-1">@Model.Topics.FirstOrDefault(t => t.Id == Model.TopicId).Name</p>
         }
 
-        <div class="flex flex-wrap justify-between">
+        <div class="grid grid-cols-6 gap-10">
             @* LARGE 1 *@
-            @{
-            }
+
             @if (@Model.Posts.Any())
             {
                 var large = @Model.Posts.First();
-                <a asp-route-culture="@HttpContext.Request.RouteValues["culture"]" asp-page="/Post/Index" asp-route-PostId="@large?.Id" class="block bg-white rounded-xl flex overflow-hidden group cursor-pointer">
-                    <picture class="basis-[453px] lg:basis-[643px] overflow-hidden bg-black w-full shrink-0">
-                        <img alt="post-cover" class="w-full aspect-[16/9] object-cover scale-100 group-hover:scale-105 ease-in duration-200 opacity-100 group-hover:opacity-80" src="@large?.Content.Cover?.GetInfo?.UrlXl"/>
+                <a asp-route-culture="@HttpContext.Request.RouteValues["culture"]" asp-page="/Post/Index" asp-route-PostId="@large?.Id" class="col-span-6 bg-white rounded-xl flex flex-col sm:flex-row overflow-hidden group cursor-pointer">
+                    <picture class="sm:basis-[453px] lg:basis-[643px] overflow-hidden bg-black w-full shrink-0">
+                        <img alt="post-cover" class="h-full object-cover scale-100 group-hover:scale-105 ease-in duration-200 opacity-100 group-hover:opacity-80" src="@large?.Content.Cover?.GetInfo?.UrlLgCrop169"/>
                     </picture>
-                    <div class="p-[32px] flex flex-col justify-between grow">
+                    <div class="p-[24px] lg:p-[32px] flex flex-col justify-between grow">
                         <div>
                             <p class="text-xs font-medium text-gray-600">@Model.Categories.Find(c => c.Id == large?.Category)?.Name</p>
-                            <h3 class="text-3xl font-semibold mt-2">@large?.Title</h3>
+                            <h3 class="text-md sm:text-lg lg:text-3xl font-black sm:font-bold lg:font-semibold mt-2">@large?.Title</h3>
                         </div>
                         <p class="text-sm font-medium text-gray-500 mt-2">@large?.CreatedAt.ToString("D")</p>
                     </div>
@@ -44,7 +43,7 @@
             else
             {
                 <div class="basis-full bg-white rounded-xl flex items-center overflow-hidden">
-                    <picture class="basis-[453px] lg:basis-[643px] overflow-hidden bg-black">
+                    <picture class="sm:basis-[453px] lg:basis-[643px] overflow-hidden bg-black">
                         @* <img alt="post-cover" class="w-full aspect-[16/9] object-cover scale-100 group-hover:scale-105 ease-in duration-200 opacity-100 group-hover:opacity-80" src="@large?.Content.Cover?.GetInfo?.UrlXl"/> *@
                         <div class="w-full h-[264px] flex items-center justify-center bg-gray-300">
                             <svg class="h-10 w-10" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
@@ -68,17 +67,17 @@
             @for (var mIndex = 1; mIndex <= 4; mIndex++)
             {
                 var medium = @Model.Posts.Count() >= mIndex + 1 ? @Model.Posts[mIndex] : null;
-                <a asp-route-culture="@HttpContext.Request.RouteValues["culture"]" asp-page="/Post/Index" asp-route-PostId="@medium?.Id" class="block mt-[36px] w-[472px] rounded-xl overflow-hidden group">
-                    <picture class="h-[264px] block overflow-hidden bg-black">
+                <a asp-route-culture="@HttpContext.Request.RouteValues["culture"]" asp-page="/Post/Index" asp-route-PostId="@medium?.Id" class="col-span-6 sm:col-span-3 bg-white rounded-xl flex flex-col overflow-hidden group cursor-pointer">
+                    <picture class="sm:basis-[187px] lg:basis-[266px] block overflow-hidden bg-black">
                         @{
                             var mCover = medium?.Content.Cover;
                             if (mCover != null)
                             {
-                                <img alt="cover" class="w-full bg-black h-[264px] object-cover scale-100 group-hover:scale-105 ease-in duration-200 opacity-100 group-hover:opacity-80" src="@mCover?.GetInfo?.UrlXl"/>
+                                <img alt="cover" class="h-full object-cover scale-100 group-hover:scale-105 ease-in duration-200 opacity-100 group-hover:opacity-80" src="@mCover?.GetInfo?.UrlLgCrop169"/>
                             }
                             else
                             {
-                                <div class="w-full h-[264px] flex items-center justify-center bg-gray-300">
+                                <div class="w-full sm:h-[187px] lg:h-[266px] flex items-center justify-center bg-gray-300">
                                     <svg class="h-10 w-10" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
                                         <g>
                                             <g>
@@ -93,11 +92,13 @@
                             }
                         }
                     </picture>
-                    <div class="p-[32px] bg-white h-full">
+                    <div class="p-[24px] lg:p-[32px] flex flex-col justify-between grow">
                         @if (medium != null)
                         {
-                            <p class="text-xs font-medium text-gray-600">@Model.Categories.Find(c => c.Id == medium?.Category)?.Name</p>
-                            <h3 class="text-2xl font-semibold mt-2">@medium?.Title</h3>
+                            <div>
+                                <p class="text-xs font-medium text-gray-600">@Model.Categories.Find(c => c.Id == medium?.Category)?.Name</p>
+                                <h3 class="text-md sm:text-lg lg:text-2xl font-black sm:font-bold lg:font-semibold mt-2">@medium?.Title</h3>
+                            </div>
                             <p class="text-sm font-medium text-gray-500 mt-2">@medium?.CreatedAt.ToString("D")</p>
                         }
                     </div>
@@ -105,16 +106,17 @@
             }
 
             @* SMALL 6 *@
+
             @for (var sIndex = 5; sIndex < Model.PageSize; sIndex++)
             {
                 var small = @Model.Posts.Count() >= sIndex + 1 ? @Model.Posts[sIndex] : null;
-                <a asp-route-culture="@HttpContext.Request.RouteValues["culture"]" asp-page="/Post/Index" asp-route-PostId="@small?.Id" class="block mt-[36px] w-[303px] rounded-xl overflow-hidden group">
-                    <picture class="h-[170px] block overflow-hidden bg-black">
+                <a asp-route-culture="@HttpContext.Request.RouteValues["culture"]" asp-page="/Post/Index" asp-route-PostId="@small?.Id" class="col-span-6 sm:col-span-3 lg:col-span-2 rounded-xl flex flex-col overflow-hidden group cursor-pointer">
+                    <picture class="sm:basis-[170px] block overflow-hidden bg-black">
                         @{
                             var mCover = small?.Content.Cover;
                             if (mCover != null)
                             {
-                                <img class="w-full bg-black h-[170px] object-cover scale-100 group-hover:scale-105 ease-in duration-200 opacity-100 group-hover:opacity-80" src="@mCover?.GetInfo?.UrlXl"/>
+                                <img alt="cover" class="h-full object-cover scale-100 group-hover:scale-105 ease-in duration-200 opacity-100 group-hover:opacity-80" src="@mCover?.GetInfo?.UrlMdCrop169"/>
                             }
                             else
                             {
@@ -133,11 +135,13 @@
                             }
                         }
                     </picture>
-                    <div class="p-5 pl-7 bg-white h-full">
+                    <div class="p-5 pl-7 bg-white flex flex-col justify-between grow">
                         @if (small != null)
                         {
-                            <p class="text-xs font-medium text-gray-600">@Model.Categories.Find(c => c.Id == small?.Category)?.Name</p>
-                            <h3 class="text-2xl font-semibold mt-2">@small?.Title</h3>
+                            <div>
+                                <p class="text-xs font-medium text-gray-600">@Model.Categories.Find(c => c.Id == small?.Category)?.Name</p>
+                                <h3 class="text-md sm:text-lg font-black sm:font-bold mt-2">@small?.Title</h3>
+                            </div>
                             <p class="text-sm font-medium text-gray-500 mt-2">@small?.CreatedAt.ToString("D")</p>
                         }
                     </div>
