--- a/Blog.Web/Pages/Locale/Index.cshtml
+++ b/Blog.Web/Pages/Locale/Index.cshtml
@@ -1,7 +1,7 @@
 @page
 @model Blog.Web.Pages.Locale.Index
 
-<div class="lg:w-[980px] w-[692px] mx-auto mt-10">
+<div class="max-w-[366px] sm:max-w-full w-5/6 sm:w-[692px] lg:w-[980px] mx-auto mt-10">
     <h1 class="text-xl font-medium">This site in other language</h1>
     <div class="border-t border-gray-300 w-full mt-3"></div>
 
