--- a/Blog.Web/Pages/Post/Index.cshtml
+++ b/Blog.Web/Pages/Post/Index.cshtml
@@ -25,7 +25,7 @@
     @* Article Cover Begin *@
     <div class="max-w-full sm:w-[576px] md:w-[600px] lg:w-[980px] mx-auto my-10">
         <img class="w-full  sm:rounded-lg  object-cover" src="@Model.Post.Content.Cover?.GetInfo?.UrlXl"/>
-        <div class="lg:w-[653px] w-[576px] mx-auto text-xs py-4 text-gray-500">
+        <div class="max-w-[366px] sm:max-w-full w-5/6 sm:w-[576px] lg:w-[653px]  mx-auto text-xs py-4 text-gray-500">
             @Model.Post.Content.Cover?.Caption
         </div>
     </div>
@@ -55,7 +55,7 @@
                 {
                     var blockImg = b.Images.First();
                     <img class="w-full sm:rounded-lg object-cover" src="@blockImg.GetInfo?.UrlLg"/>
-                    <div class="w-full sm:w-[576px] lg:w-[653px] mx-auto text-xs py-4 text-gray-500">
+                    <div class="max-w-[366px] sm:max-w-full w-5/6 sm:w-[576px] lg:w-[653px]  mx-auto text-xs py-4 text-gray-500">
                         @blockImg.Caption
                     </div>
                 }
