--- a/Blog.Web/Pages/Components/Nav/Default.cshtml
+++ b/Blog.Web/Pages/Components/Nav/Default.cshtml
@@ -3,6 +3,9 @@
 @model Blog.Web.ViewModels.ViewComponents.NavViewModel
 @inject CommonLocalizationService CommonLocalization
 
+@{
+}
+
 <nav class="sticky top-0 z-20 bg-white backdrop-filter backdrop-blur-lg bg-opacity-30">
     <div class="max-w-[980px] mx-auto">
         <div class="flex items-center justify-between h-12 px-4 sm:px-6 lg:px-0">
@@ -12,10 +15,10 @@
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-3 h-3">
                         <path fill-rule="evenodd" d="M9 3.5a5.5 5.5 0 100 11 5.5 5.5 0 000-11zM2 9a7 7 0 1112.452 4.391l3.328 3.329a.75.75 0 11-1.06 1.06l-3.329-3.328A7 7 0 012 9z" clip-rule="evenodd"/>
                     </svg>
-                    @CommonLocalization.GetWith("站内搜索", Model.DomainInfo!.Name)
+                    @CommonLocalization.GetWith("搜索（Nav）", Model.DomainInfo!.Name)
                 </button>
                 <button x-on:click="toggleTopDropDown()" type="button" class="flex items-center justify-between gap-1">
-                    @CommonLocalization.Get("热门话题")
+                    @CommonLocalization.Get("话题筛选（Nav）")
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5"/>
                     </svg>
@@ -82,7 +85,9 @@
                                 <div class="grid grid-cols-4 gap-10 pb-10">
                                     @foreach (var topic in Model.DomainInfo!.Topics)
                                     {
-                                        <a class="hover:text-blue-700 @(topic.Id == Model.CurrentTopic ? "text-gray-500" : string.Empty)" asp-page="/Index" asp-route-culture="@Context.Request.RouteValues["culture"]" asp-route-TopicId="@topic.Id">@topic.Name</a>
+                                        <a class="hover:text-blue-700 @(topic.Id == Model.CurrentTopic ? "text-gray-500" : string.Empty)" asp-page="/Index" asp-route-culture="@Context.Request.RouteValues["culture"]" asp-route-TopicId="@topic.Id">
+                                            @CommonLocalization.GetWith(topic.Name, Model.DomainInfo!.Name)
+                                        </a>
                                     }
                                 </div>
                             </div>
